@@ -55,99 +55,20 @@ import ec.select.*;
  * @version 1.0 
  */
 
-public class LexicographicTournamentSelection extends SelectionMethod implements SteadyStateBSourceForm
+public class LexicographicTournamentSelection extends TournamentSelection
     {
     /** default base */
     public static final String P_TOURNAMENT = "lexicographic-tournament";
-
-    public static final String P_PICKWORST = "pick-worst";
-
-    /** size parameter */
-    public static final String P_SIZE = "size";
-
-    /** Default size */
-    public static final int DEFAULT_SIZE = 7;
-
-    /** Size of the tournament*/
-    public int size;
-
-    /** Do we pick the worst instead of the best? */
-    public boolean pickWorst;
 
     public Parameter defaultBase()
         {
         return SelectDefaults.base().push(P_TOURNAMENT);
         }
     
-    public void setup(final EvolutionState state, final Parameter base)
-        {
-        super.setup(state,base);
-        
-        Parameter def = defaultBase();
-
-        size = state.parameters.getInt(base.push(P_SIZE),def.push(P_SIZE),1);
-        if (size < 1)
-            state.output.fatal("Tournament size must be >= 1.",base.push(P_SIZE),def.push(P_SIZE));
-
-        pickWorst = state.parameters.getBoolean(base.push(P_PICKWORST),def.push(P_PICKWORST),false);
-        }
-
-
-    // I hard-code both produce(...) methods for efficiency's sake
-
-    public int produce(final int subpopulation,
-        final EvolutionState state,
-        final int thread)
-        {
-        // pick size random individuals, then pick the best.
-        Individual[] oldinds = (state.population.subpops[subpopulation].individuals);
-        int i = state.random[thread].nextInt(oldinds.length);
-        long si = 0;
-
-        for (int x=1;x<size;x++)
-            {
-            int j = state.random[thread].nextInt(oldinds.length);
-            if (pickWorst)
-                {
-                if( !oldinds[j].fitness.betterThan(oldinds[i].fitness)) { i = j; si = 0; }
-                else if( !oldinds[i].fitness.betterThan(oldinds[j].fitness)) { } // do nothing
-                else
-                    {
-                    if (si==0)
-                        si = oldinds[i].size();
-
-                    long sj = oldinds[j].size();
-
-                    if (sj >= si) // sj's got worse lookin' trees
-                        { i = j; si = sj; }
-                    }
-                }
-            else
-                { 
-                if( oldinds[j].fitness.betterThan( oldinds[i].fitness ) ) { i = j; si = 0; }
-                else if( oldinds[i].fitness.betterThan(oldinds[j].fitness)) { } // do nothing
-                else 
-                    {
-                    if (si==0)
-                        si = oldinds[i].size();
-
-                    long sj = oldinds[j].size();
-
-                    if (sj < si) // sj's got better lookin' trees
-                        { i = j; si = sj; }
-                    }
-                }
-            }
-        return i;
-        }
-
-    public void individualReplaced(final SteadyStateEvolutionState state,
-        final int subpopulation,
-        final int thread,
-        final int individual)
-        { return; }
-    
-    public void sourcesAreProperForm(final SteadyStateEvolutionState state)
-        { return; }
-    
+	public boolean betterThan(Individual first, Individual second, int subpopulation, EvolutionState state, int thread)
+		{
+		return (first.fitness.betterThan(second.fitness) ||
+				(first.fitness.equivalentTo(second.fitness) && first.size() < second.size()));
+		}
+		
     }
